Fixed overlapping css rules

--- a/static/main.css
+++ b/static/main.css
@@ -125,7 +125,7 @@ form.navbar-date-form > div > input {
     font-size: 12px;
 }
 
-.range-selection .share {
+.range-selection .share-links {
     margin: 10px;
 }
 
